# canisters

./: Cargo.toml  NOTES.md  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/factory-canister/: Cargo.toml
src/factory-canister/src/: lib.rs
src/officex-canisters-backend/: Cargo.toml
src/officex-canisters-backend/src/: lib.rs  logic_tests.rs
src/officex-canisters-frontend/: package.json
src/officex-canisters-frontend/src/: App.jsx
