[package]
name = "officex-canisters-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
serde_json = "1.0.128"
regex = "1.10.6"
ulid = "1.1.3"
sha2 = "0.10.8"


[dev-dependencies]
serial_test = "0.5"
ic-agent = "0.24.0"
ic-types = "0.7.0"
tokio = { version = "1.28.2", features = ["full"] }

[profile.test]
test-threads = 1
